--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </head>
 <body>
     <h1>Happy 19th Birthday, Jojo!</h1>
-    <p>Wishing you all the best on your special day!</p>
+    <p>hehe looks like you gonna be mine forever</p>
     <div class="balloons">
         <div class="balloon" style="left: 10%;"></div>
         <div class="balloon" style="left: 30%;"></div>
